# obs_simultaneous_translation

./: README.md  main.py  pyproject.toml
